Images, Styling, and Site Structure

--- a/internationalss.html
+++ b/internationalss.html
@@ -10,7 +10,41 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:700|Barlow:400,700" rel="stylesheet">
+  
+  <!-- CSS -->
+  <link rel='stylesheet' type='text/css' href='global.css' id="styles">
 
+  <!-- Javascript -->
+  <script type="text/Javascript" src="spacestyles.js"></script>
 </head>
+<body>
+  <!-- Site Header -->
+  <header role="banner" aria-label="site navigation" class="site-header">
+    <!-- Site Navigation -->
+    <nav role="navigation" class="site-navigation">
+      <ul class="site-header-left">
+        <li>
+            <button id="lightMode" onclick="lightMode()">
+                <img src="images/sun.png" id="sun" alt="Light Mode - Sun Icon"/>
+            </button>
+            <button id="darkMode" onclick="darkMode()">
+                <img src="images/moon.png" id="moon" alt="Night Mode - Moon Icon"/>
+            </button>
+            <button id="galaxyMode" onclick="galaxyMode()">
+                <img  src="images/space.png" id="stars" alt="Galaxy Mode - Stars Icon"/>
+            </button>
+        </li>
+      </ul>
+      <ul class="site-header-right">
+        <li>
+          <a href="about.html">About Space Styles</a>
+        </li>
+        <li>
+          <a href="#" class="button button-primary">Subscribe</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 <h1>International Space Station</h1>
+</body>
 </html>
