--- a/about.html
+++ b/about.html
@@ -10,7 +10,52 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:700|Barlow:400,700" rel="stylesheet">
+  
+  <!-- CSS -->
+  <link rel='stylesheet' type='text/css' href='global.css' id="styles">
 
+  <!-- Javascript -->
+  <script type="text/Javascript" src="spacestyles.js"></script>
 </head>
-<h1>About NASA</h1>
+<body>
+  <!-- Site Header -->
+  <header role="banner" aria-label="site navigation" class="site-header">
+    <!-- Site Navigation -->
+    <nav role="navigation" class="site-navigation">
+      <ul class="site-header-left">
+        <li>
+            <button id="lightMode" onclick="lightMode()">
+                <img src="images/sun.png" id="sun" alt="Light Mode - Sun Icon"/>
+            </button>
+            <button id="darkMode" onclick="darkMode()">
+                <img src="images/moon.png" id="moon" alt="Night Mode - Moon Icon"/>
+            </button>
+            <button id="galaxyMode" onclick="galaxyMode()">
+                <img  src="images/space.png" id="stars" alt="Galaxy Mode - Stars Icon"/>
+            </button>
+        </li>
+      </ul>
+      <ul class="site-header-right">
+        <li>
+          <a href="about.html">About Space Styles</a>
+        </li>
+        <li>
+          <a href="#" class="button button-primary">Subscribe</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <h1>About Space Styles</h1>
+  <h2>Inspiration</h2>
+  <div class="about-section-left"></div>
+  <div class="about-section right">
+    <p></p>
+  </div>
+  <h2>Vision</h2>
+  <p></p>
+  <h2>Color Schemes</h2>
+    <div class="">
+      
+    </div>
+</body>
 </html>
