--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:700|Barlow:400,700" rel="stylesheet">
   
   <!-- CSS -->
-  <link rel='stylesheet' type='text/css' href='global.css' id="styles">
+  <link rel='stylesheet' type='text/css' href='/styles/global.css' id="styles">
 
   <!-- Javascript -->
   <script type="text/Javascript" src="spacestyles.js"></script>
@@ -39,13 +39,10 @@
         <li>
           <a href="about.html">About Space Styles</a>
         </li>
-        <li>
-          <a href="#" class="button button-primary">Subscribe</a>
-        </li>
       </ul>
     </nav>
   </header>
-  <h1>About Space Styles</h1>
+  <h1>About Space Facts</h1>
   <h2>Inspiration</h2>
   <div class="about-section-left"></div>
   <div class="about-section right">
