--- a/spacecraft.html
+++ b/spacecraft.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Space Styles > Aurora Finder</title>
+  <title>Space Facts > Spacecraft</title>
 
   <!-- Meta -->
   <meta charset="utf-8">
@@ -45,6 +45,6 @@
         </ul>
       </nav>
     </header>
-<h1>Aurora Finder</h1>
+<h1>Spacecraft</h1>
 </body>
 </html>
