--- a/stars.html
+++ b/stars.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Space Styles > Night Sky Map</title>
+  <title>Space Facts > Stars</title>
 
   <!-- Meta -->
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:700|Barlow:400,700" rel="stylesheet">
   
   <!-- CSS -->
-  <link rel='stylesheet' type='text/css' href='global.css' id="styles">
+  <link rel='stylesheet' type='text/css' href='styles/stars.css' id="styles">
 
   <!-- Javascript -->
   <script type="text/Javascript" src="spacestyles.js"></script>
@@ -24,28 +24,33 @@
     <nav role="navigation" class="site-navigation">
       <ul class="site-header-left">
         <li>
-            <button id="lightMode" onclick="lightMode()">
-                <img src="images/sun.png" id="sun" alt="Light Mode - Sun Icon"/>
-            </button>
-            <button id="darkMode" onclick="darkMode()">
-                <img src="images/moon.png" id="moon" alt="Night Mode - Moon Icon"/>
-            </button>
-            <button id="galaxyMode" onclick="galaxyMode()">
-                <img  src="images/space.png" id="stars" alt="Galaxy Mode - Stars Icon"/>
-            </button>
+            <a href="">
+              <button id="lightMode">
+                  <img src="images/sun.png" id="sun" alt="Light Mode - Sun Icon"/>
+              </button>
+            </a>
+            <a href="">
+              <button id="darkMode">
+                  <img src="images/moon.png" id="moon" alt="Night Mode - Moon Icon"/>
+              </button>
+            </a>
+            <a href="">
+              <button id="galaxyMode" a href="">
+                  <img  src="images/space.png" id="stars" alt="Galaxy Mode - Stars Icon"/>
+              </button>
+            </a>
         </li>
       </ul>
       <ul class="site-header-right">
         <li>
-          <a href="about.html">About Space Styles</a>
+          <a href="about.html">About</a>
         </li>
         <li>
-          <a href="#" class="button button-primary">Subscribe</a>
+          <a href="#" class="button button-primary">Quiz</a>
         </li>
       </ul>
     </nav>
   </header>
-<h1>Night Sky Map</h1>
-<iframe width="500" height="300" style="border:none;" src="https://skyandtelescope.org/interactive-sky-chart/"></iframe>
+<h1>Stars</h1>
 </body>
 </html>
