Home Page Design Changes

--- a/planets.html
+++ b/planets.html
@@ -33,5 +33,56 @@
     </nav>
   </header>
 <h1>Planets</h1>
+<main role="main">
+  <!-- Main Content Header -->
+  <section role="region" aria-label="page-hero-title" class="page-hero-header">
+    <div class="container" >
+      <div class="page-hero-header-left">
+        <h2 id="page-hero-title">Home Planet Earth</h2><br>
+        <p>Explore what makes Earth home to life, the stars and planets of our galaxy, and how we study space</p>
+      </div>
+      <div class="page-hero-header-right">
+        <span class="shooting-star"></span>
+        <img src="images/sunset.jpg"/>
+      </div>
+    </div>
+  </section>
+  <!-- Main Content Benefits -->
+  <section role="region" class="main-content-benefits">
+    <div class="container-title">
+      <h2>Flashcards</h2>
+    </div>
+    <div class="container">
+      <ul class="clearfix">
+        <a href="nightskymap.html">
+          <li class="item">
+            <div class="item-image">
+                <img src="images/night.jpg" alt="Glaciers"/>
+            </div>
+            <h2>Glaciers</h2>
+            <p>Where are they from and where are they going?</p>
+          </li>
+        </a>
+        <a href="internationalss.html">
+          <li class="item">
+            <div class="item-image">
+                <img src="images/astronaut.jpg" alt=""/>
+            </div>
+            <h2>National Disasters</h2>
+            <p>Learn more about the natural disasters around the globe</p>
+          </li>
+        </a>
+        <a href="aurora.html">
+          <li class="item">
+            <div class="item-image">
+                <img src="images/aurora.jpg" alt="Aurora Borealis Green Lights in the Night Sky"/>
+            </div>
+            <h2>Layers of the Earth</h2>
+            <p>Hover to see the many layers surrounding Earth's core</p>
+          </li>
+        </a>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
