--- a/spacecraft.html
+++ b/spacecraft.html
@@ -46,5 +46,8 @@
       </nav>
     </header>
 <h1>Spacecraft</h1>
+<iframe src="https://eyes.nasa.gov/apps/earth/?embed=true" title="Explore in 3D—Eyes on the Earth" class="smd-iframe-iframe margin-left-auto margin-right-auto border-0" allow="fullscreen" data-gtm-yt-inspected-6="true">
+  Unable to render the provided source
+</iframe>
 </body>
 </html>
