--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>About NASA</title>
+  <title>About Space Facts</title>
 
   <!-- Meta -->
   <meta charset="utf-8">
